--- a/.github/workflows/deploy-tts-space.yml
+++ b/.github/workflows/deploy-tts-space.yml
@@ -36,5 +36,4 @@ jobs:
             "${{ env.REPO_ID }}" \
             ./huggingface/openai-tts \
             . \
-            --repo-type space \
-            --overwrite
+            --repo-type space
