--- a/.github/workflows/deploy-tts-space.yml
+++ b/.github/workflows/deploy-tts-space.yml
@@ -4,7 +4,7 @@ on:
   workflow_dispatch:
   push:
     paths:
-      - "huggingface/openai-tts/**"
+      - "huggingface/spaces/openai-tts/**"
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
@@ -28,12 +28,12 @@ jobs:
       - name: Login to Hugging Face
         run: huggingface-cli login --token "${{ secrets.HUGGINGFACE_TOKEN }}"
 
-      - name: Upload app.py to Hugging Face Space
+      - name: Upload Files to Hugging Face Space
         env:
           HF_HUB_ENABLE_HF_TRANSFER: 1
         run: |
           huggingface-cli upload \
             "${{ env.REPO_ID }}" \
-            ./huggingface/openai-tts \
+            ./huggingface/spaces/openai-tts \
             . \
             --repo-type space
