--- a/.gitignore
+++ b/.gitignore
@@ -1,93 +1,54 @@
-# Byte-compiled / optimized / DLL files
 __pycache__/
-*.py[cod]
-
-# C extensions
-*.so
-
-# Distribution / packaging
-.Python
-env/
-build/
-develop-eggs/
-dist/
-downloads/
-eggs/
-.eggs/
-lib/
-lib64/
-parts/
-sdist/
-var/
-*.egg-info/
-.installed.cfg
-*.egg
-
-# PyInstaller
-#  Usually these files are written by a python script from a template
-#  before PyInstaller builds the exe, so as to inject date/other infos into it.
-*.manifest
-*.spec
-
-# Installer logs
-pip-log.txt
-pip-delete-this-directory.txt
-
-# Unit test / coverage reports
-htmlcov/
-.tox/
+.cache
 .coverage
 .coverage.*
-.cache
-nosetests.xml
-coverage.xml
+.DS_Store
+.dvc/config.local
+.eggs/
+.env
+.idea
+.installed.cfg
+.ipynb_checkpoints/
+.mypy_cache/
+.Python
+.spyproject/
+.tox/
+.venv/
+.vscode/
 *.cover
-
-# Translations
+*.db
+*.egg
+*.egg-info/
+*.log
+*.manifest
 *.mo
 *.pot
-
-# Django stuff:
-*.log
-
-# Sphinx documentation
-docs/_build/
-
-# PyBuilder
-target/
-
-# DotEnv configuration
-.env
-
-# Database
-*.db
+*.py[cod]
 *.rdb
-
-# Pycharm
-.idea
-
-# VS Code
-.vscode/
-
-# Spyder
-.spyproject/
-
-# Jupyter NB Checkpoints
-.ipynb_checkpoints/
-
-# exclude data from source control by default
-/data/
-
-# Mac OS-specific storage files
-.DS_Store
-
-# vim
-*.swp
+*.so
+*.spec
 *.swo
-
-# Mypy cache
-.mypy_cache/
-
-# CUSTOM IGNORES
-.venv/
+*.swp
+*.temp
+*.tmp
+build/
 combined.txt
+coverage.xml
+data/
+develop-eggs/
+dist/
+docs/_build/
+downloads/
+eggs/
+env/
+htmlcov/
+lib/
+lib64/
+models/
+nosetests.xml
+parts/
+pip-delete-this-directory.txt
+pip-log.txt
+sdist/
+target/
+var/
