--- a/.github/workflows/mlops-pipeline.yml
+++ b/.github/workflows/mlops-pipeline.yml
@@ -26,15 +26,18 @@ jobs:
   build-and-run-pipeline:
     runs-on: ubuntu-latest
     env:
-      HF_TOKEN: ${{ secrets.HF_TOKEN }}
+      # Set AWS credentials from GitHub Secrets
+      AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+      AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+      AWS_DEFAULT_REGION: ${{ secrets.AWS_DEFAULT_REGION }}
       DVC_STUDIO_TOKEN: ${{ secrets.DVC_STUDIO_TOKEN }}
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@f43a0e5ff2bd294095638e18286ca9a3d1956744 # v3.6.0
+        uses: actions/checkout@v3
 
       - name: Set up Python
-        uses: actions/setup-python@65d7f2d534ac1bc67fcd62888c5f4f3d2cb2b236 # v4.7.1
+        uses: actions/setup-python@v4
         with:
           python-version: "3.x"
 
@@ -45,12 +48,9 @@ jobs:
 
       - name: Configure DVC remotes
         run: |
-          dvc remote modify models_remote auth custom
-          dvc remote modify models_remote --local custom_auth_header "Authorization: Bearer $HF_TOKEN"
-          dvc remote modify models_remote --local password "$HF_TOKEN"
-          dvc remote modify dataset_remote auth custom
-          dvc remote modify dataset_remote --local custom_auth_header "Authorization: Bearer $HF_TOKEN"
-          dvc remote modify dataset_remote --local password "$HF_TOKEN"
+          dvc remote modify models_remote region $AWS_DEFAULT_REGION
+          dvc remote modify datasets_remote region $AWS_DEFAULT_REGION
+        shell: bash
 
       - name: Pull data and models from DVC remotes
         run: |
@@ -67,7 +67,7 @@ jobs:
 
       - name: Commit and push changes
         if: always()
-        uses: stefanzweifel/git-auto-commit-action@8621497c8c39c72f3e2a999a26b4ca1b5058a842 # v5.0.1
+        uses: stefanzweifel/git-auto-commit-action@v5
         with:
           commit_message: "Update DVC artifacts and metrics"
           branch: ${{ github.ref }}
