--- a/.dvc/config
+++ b/.dvc/config
@@ -6,5 +6,7 @@
     url = https://studio.iterative.ai
 ['remote "datasets_remote"']
     url = s3://mlops-artifacts-aai540-group3/datasets
+    region = us-east-1
 ['remote "models_remote"']
     url = s3://mlops-artifacts-aai540-group3/models
+    region = us-east-1
