--- a/params.yaml
+++ b/params.yaml
@@ -1,5 +1,22 @@
+data:
+  path:
+    raw: data/raw
+    interim: data/interim
+    processed: data/processed
+    external: data/external
+  dataset_name: aai540-group3/diabetes-readmission
 model:
   name: LogisticRegression
+  model_output_path: models/trained_model.joblib
+  params:
+    random_state: 42
+    max_iter: 1000
 training:
   split:
     test_size: 0.2
+    random_state: 42
+feature_engineering:
+  add_polynomial_features: true
+  poly_degree: 2
+evaluation:
+  metrics_output_path: reports/metrics.json
