--- a/.github/workflows/mlops-pipeline.yml
+++ b/.github/workflows/mlops-pipeline.yml
@@ -102,9 +102,19 @@ jobs:
         run: |
           dvc push
 
+      - name: Evaluate model
+        if: steps.check-model.outputs.model_missing != 'true'
+        run: |
+          dvc repro evaluate
+
+      - name: Visualize results
+        if: steps.check-model.outputs.model_missing != 'true'
+        run: |
+          dvc repro visualize
+
       - name: Commit and push changes
         if: always()
-        uses: stefanzweifel/git-auto-commit-action@8621497c8c39c72f3e2a999a26b4ca1b5058a842 # v5.0.1
+        uses: stefanzweifel/git-auto-commit-action@v5.0.1
         with:
           commit_message: "Update DVC artifacts and metrics"
           branch: ${{ github.ref }}
