--- a/.github/workflows/mlops-pipeline.yml
+++ b/.github/workflows/mlops-pipeline.yml
@@ -29,7 +29,7 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
-  build-and-run-pipeline:
+  run-mlops-pipeline:
     runs-on: ubuntu-latest
     env:
       AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
@@ -78,32 +78,53 @@ jobs:
           dvc status -c | awk '/missing/{print $2}' | xargs -I {} sh -c 'dvc remove {} && dvc commit {}'
         shell: bash
 
-      - name: Pull data and models from DVC remotes
+      - name: Pull data from DVC remotes
         run: |
-          dvc pull --force
+          dvc pull data/ --force
+
+      - name: Check if model exists
+        id: check-model
+        run: |
+          if [ ! -f "models/trained_model.joblib" ]; then
+            echo "model_missing=true" >> $GITHUB_OUTPUT
+          fi
+
+      - name: Pull model from DVC remote
+        if: steps.check-model.outputs.model_missing != 'true'
+        run: |
+          dvc pull models/trained_model.joblib --force
 
       - name: Run DVC pipeline
         run: |
-          dvc exp run --queue
+          if [ "${{ steps.check-model.outputs.model_missing }}" == "true" ]; then
+            echo "Model is missing. Running 'dvc repro train' first..."
+            dvc repro train
+          fi
+          dvc exp run --run-all
 
       - name: Push data and models to DVC remotes
         if: always()
         run: |
           dvc push
 
-      - name: Apply queued experiments and push changes
-        if: always()
+      - name: Evaluate model
+        if: steps.check-model.outputs.model_missing != 'true'
         run: |
-          dvc exp apply
-          dvc push
+          dvc repro evaluate
+
+      - name: Visualize results
+        if: steps.check-model.outputs.model_missing != 'true'
+        run: |
+          dvc repro visualize
 
       - name: Commit and push changes
         if: always()
-        uses: stefanzweifel/git-auto-commit-action@8621497c8c39c72f3e2a999a26b4ca1b5058a842 # v5.0.1
+        uses: stefanzweifel/git-auto-commit-action@v5.0.1
         with:
           commit_message: "Update DVC artifacts and metrics"
           branch: ${{ github.ref }}
           file_pattern: |
             dvc.lock
             dvclive/*
+            dvclive_evaluate/*
             reports/metrics.json
