--- a/dvc.yaml
+++ b/dvc.yaml
@@ -16,22 +16,44 @@ stages:
     - data/interim/:
         remote: datasets_remote
 
+  feature_engineering:
+    cmd: python src/data/build_features.py
+    deps:
+    - src/data/build_features.py
+    - data/interim/data.csv
+    outs:
+    - data/processed/data_featured.csv:
+        remote: datasets_remote
+
   split:
     cmd: python src/data/splitting.py
     deps:
     - src/data/splitting.py
-    - data/interim/data.csv
+    - data/processed/data_featured.csv
     outs:
     - data/processed/train.csv:
         remote: datasets_remote
     - data/processed/test.csv:
         remote: datasets_remote
 
+  preprocess:
+    cmd: python src/models/model1/preprocessing.py
+    deps:
+    - src/models/model1/preprocessing.py
+    - data/processed/train.csv
+    params:
+    - feature_engineering
+    outs:
+    - data/processed/train_preprocessed.csv:
+        remote: datasets_remote
+    - data/processed/preprocessor.joblib:
+        remote: models_remote
+
   train:
     cmd: python src/models/model1/train.py
     deps:
     - src/models/model1/train.py
-    - data/processed/train.csv
+    - data/processed/train_preprocessed.csv
     params:
     - model.name
     - training.split.test_size
@@ -57,6 +79,10 @@ stages:
     plots:
     - dvclive_evaluate/plots/metrics/precision.tsv:
         cache: false
+    - dvclive_evaluate/plots/metrics/recall.tsv:
+        cache: false
+    - dvclive_evaluate/plots/metrics/roc_auc.tsv:
+        cache: false
 
   visualize:
     cmd: python src/visualization/visualize.py
@@ -64,6 +90,18 @@ stages:
     - src/visualization/visualize.py
     - dvclive/plots/metrics/cv_accuracy.tsv
     - dvclive_evaluate/plots/metrics/accuracy.tsv
+    - dvclive_evaluate/plots/metrics/precision.tsv
+    - dvclive_evaluate/plots/metrics/recall.tsv
+    - dvclive_evaluate/plots/metrics/roc_auc.tsv
     outs:
     - reports/figures:
         cache: false
+
+metrics:
+- dvclive/metrics.json
+- dvclive_evaluate/metrics.json
+plots:
+- dvclive/plots/metrics:
+    x: step
+- dvclive_evaluate/plots/metrics:
+    x: step
