update mlops pipeline

--- a/.github/workflows/mlops-pipeline.yml
+++ b/.github/workflows/mlops-pipeline.yml
@@ -39,18 +39,20 @@ jobs:
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@692973e3d937129bcbf40652eb9f2f61becf3332 # v4.1.7
+        uses: actions/checkout@692973e3d937129bcbf40652eb9f2f61becf3332  # v4.1.7
+        with:
+          fetch-depth: 0
 
       - name: Cache Python dependencies
-        uses: actions/cache@0c45773b623bea8c8e75f6c82b208c3cf94ea4f9 # v4.0.2
+        uses: actions/cache@0c45773b623bea8c8e75f6c82b208c3cf94ea4f9  # v4.0.2
         with:
           path: ~/.cache/pip
-          key: ${{ runner.os }}-pip-${{ hashFiles('requirements.txt') }}
+          key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
           restore-keys: |
             ${{ runner.os }}-pip-
 
       - name: Set up Python
-        uses: actions/setup-python@f677139bbe7f9c59b41e40162b753c062f5d49a3 # v5.2.0
+        uses: actions/setup-python@f677139bbe7f9c59b41e40162b753c062f5d49a3  # v5.2.0
         with:
           python-version: "3.x"
 
@@ -63,47 +65,21 @@ jobs:
         run: |
           dvc remote modify models_remote region $AWS_DEFAULT_REGION
           dvc remote modify datasets_remote region $AWS_DEFAULT_REGION
-        shell: bash
 
-      - name: Cache DVC repository
-        uses: actions/cache@0c45773b623bea8c8e75f6c82b208c3cf94ea4f9 # v4.0.2
+      - name: Cache DVC cache directory
+        uses: actions/cache@0c45773b623bea8c8e75f6c82b208c3cf94ea4f9  # v4.0.2
         with:
-          path: .dvc
-          key: ${{ runner.os }}-dvc-${{ hashFiles('**/dvc.lock') }}
+          path: .dvc/cache
+          key: ${{ runner.os }}-dvc-cache-${{ hashFiles('dvc.lock') }}
           restore-keys: |
-            ${{ runner.os }}-dvc-
+            ${{ runner.os }}-dvc-cache-
 
-      - name: Handle potentially corrupted DVC files
+      - name: Pull data and models from DVC remotes
         run: |
-          dvc status -c | awk '/missing/{print $2}' | xargs -I {} sh -c 'dvc remove {} && dvc commit {}'
-        shell: bash
-
-      - name: Pull data from DVC remotes
-        run: |
-          dvc pull data/raw/data.csv --force
-          dvc pull data/interim/data.csv --force
-          dvc pull data/processed/data_featured.csv --force
-          dvc pull data/processed/train.csv --force
-          dvc pull data/processed/test.csv --force
-
-      - name: Check if model exists
-        id: check-model
-        run: |
-          if [ ! -f "models/trained_model.joblib" ]; then
-            echo "model_missing=true" >> $GITHUB_OUTPUT
-          fi
-
-      - name: Pull model from DVC remote
-        if: steps.check-model.outputs.model_missing != 'true'
-        run: |
-          dvc pull models/trained_model.joblib --force
+          dvc pull
 
       - name: Run DVC pipeline
         run: |
-          if [ "${{ steps.check-model.outputs.model_missing }}" == "true" ]; then
-            echo "Model is missing. Running 'dvc repro train' first..."
-            dvc repro train
-          fi
           dvc exp run --run-all
 
       - name: Push data and models to DVC remotes
@@ -111,24 +87,14 @@ jobs:
         run: |
           dvc push
 
-      - name: Evaluate model
-        if: steps.check-model.outputs.model_missing != 'true'
-        run: |
-          dvc repro evaluate
-
-      - name: Visualize results
-        if: steps.check-model.outputs.model_missing != 'true'
-        run: |
-          dvc repro visualize
-
       - name: Commit and push changes
         if: always()
-        uses: stefanzweifel/git-auto-commit-action@8621497c8c39c72f3e2a999a26b4ca1b5058a842 # v5.0.1
+        uses: stefanzweifel/git-auto-commit-action@8621497c8c39c72f3e2a999a26b4ca1b5058a842  # v5.0.1
         with:
           commit_message: "Update DVC artifacts and metrics"
-          branch: ${{ github.ref }}
+          branch: ${{ github.ref_name }}
           file_pattern: |
             dvc.lock
-            dvclive/*
-            dvclive_evaluate/*
+            dvclive/
+            dvclive_evaluate/
             reports/metrics.json
