--- a/.dvc/.gitignore
+++ b/.dvc/.gitignore
@@ -1,3 +1,49 @@
 /config.local
 /tmp
 /cache
+/tmp
+/cache
+/tmp
+/cache
+/tmp
+/cache
+/tmp
+/cache
+/tmp
+/cache
+/tmp
+/cache
+/tmp
+/cache
+/tmp
+/cache
+/tmp
+/cache
+/tmp
+/cache
+/tmp
+/cache
+/tmp
+/cache
+/tmp
+/cache
+/tmp
+/cache
+/tmp
+/tmp
+/cache
+/cache
+/tmp
+/cache
+/tmp
+/cache
+/tmp
+/cache
+/tmp
+/cache
+/tmp
+/tmp
+/cache
+/cache
+/tmp
+/cache
