--- a/dvc.yaml
+++ b/dvc.yaml
@@ -3,105 +3,94 @@ stages:
     cmd: python src/data/ingestion.py
     deps:
       - src/data/ingestion.py
+    params:
+      - dataset.name
+      - dataset.path.raw
     outs:
-      - data/raw/:
-          remote: datasets_remote
+      - ${dataset.path.raw}/data.csv
 
   clean:
     cmd: python src/data/cleaning.py
     deps:
       - src/data/cleaning.py
-      - data/raw/
+      - ${dataset.path.raw}/data.csv
+    params:
+      - dataset.path.raw
+      - dataset.path.interim
     outs:
-      - data/interim/:
-          remote: datasets_remote
+      - ${dataset.path.interim}/data.csv
 
   feature_engineering:
     cmd: python src/data/build_features.py
     deps:
       - src/data/build_features.py
-      - data/interim/data.csv
+      - ${dataset.path.interim}/data.csv
+    params:
+      - dataset.path.interim
+      - dataset.path.processed
+      - feature_engineering
     outs:
-      - data/processed/data_featured.csv:
-          remote: datasets_remote
+      - ${dataset.path.processed}/data_featured.csv
 
   split:
     cmd: python src/data/splitting.py
     deps:
       - src/data/splitting.py
-      - data/processed/data_featured.csv
+      - ${dataset.path.interim}/data.csv
+    params:
+      - dataset.path.interim
+      - dataset.path.processed
+      - training.split
     outs:
-      - data/processed/train.csv:
-          remote: datasets_remote
-      - data/processed/test.csv:
-          remote: datasets_remote
+      - ${dataset.path.processed}/train.csv
+      - ${dataset.path.processed}/test.csv
 
   preprocess:
-    cmd: python src/models/model1/preprocessing.py
-    deps:
-      - src/models/model1/preprocessing.py
-      - data/processed/train.csv
-    params:
-      - feature_engineering
-    outs:
-      - data/processed/train_preprocessed.csv:
-          remote: datasets_remote
-      - data/processed/preprocessor.joblib:
-          remote: models_remote
+    foreach: ${models}
+    do:
+      cmd: python src/models/${item}/preprocessing.py model=${item}
+      deps:
+        - src/models/${item}/preprocessing.py
+        - ${dataset.path.processed}/train.csv
+      params:
+        - dataset.path.processed
+        - model.${item}
+      outs:
+        - ${dataset.path.processed}/${item}/train_preprocessed.csv
 
   train:
-    cmd: python src/models/model1/train.py
-    deps:
-      - src/models/model1/train.py
-      - data/processed/train_preprocessed.csv
-    params:
-      - model.name
-      - training.split.test_size
-    outs:
-      - models/trained_model.joblib:
-          remote: models_remote
-    metrics:
-      - dvclive/plots/metrics/cv_accuracy.tsv:
-          cache: false
-    plots:
-      - dvclive/plots/metrics/training_completed.tsv:
-          cache: false
+    foreach: ${models}
+    do:
+      cmd: python src/models/${item}/train.py model=${item}
+      deps:
+        - src/models/${item}/train.py
+        - ${dataset.path.processed}/${item}/train_preprocessed.csv
+      params:
+        - dataset.path.processed
+        - model.${item}
+      outs:
+        - models/${item}/model.pkl
 
   evaluate:
-    cmd: python src/visualization/evaluation.py
-    deps:
-      - src/visualization/evaluation.py
-      - models/trained_model.joblib
-      - data/processed/test.csv
-    metrics:
-      - dvclive_evaluate/plots/metrics/accuracy.tsv:
-          cache: false
-    plots:
-      - dvclive_evaluate/plots/metrics/precision.tsv:
-          cache: false
-      - dvclive_evaluate/plots/metrics/recall.tsv:
-          cache: false
-      - dvclive_evaluate/plots/metrics/roc_auc.tsv:
-          cache: false
+    foreach: ${models}
+    do:
+      cmd: python src/models/${item}/evaluate.py model=${item}
+      deps:
+        - src/models/${item}/evaluate.py
+        - models/${item}/model.pkl
+        - ${dataset.path.processed}/test.csv
+      params:
+        - dataset.path.processed
+        - model.${item}
+      metrics:
+        - reports/metrics/${item}_metrics.json:
+            cache: false
 
   visualize:
     cmd: python src/visualization/visualize.py
     deps:
       - src/visualization/visualize.py
-      - dvclive/plots/metrics/cv_accuracy.tsv
-      - dvclive_evaluate/plots/metrics/accuracy.tsv
-      - dvclive_evaluate/plots/metrics/precision.tsv
-      - dvclive_evaluate/plots/metrics/recall.tsv
-      - dvclive_evaluate/plots/metrics/roc_auc.tsv
+      - reports/metrics/logistic_regression_metrics.json
+      - reports/metrics/autogluon_metrics.json
     outs:
-      - reports/figures:
-          cache: false
-
-metrics:
-  - dvclive/metrics.json
-  - dvclive_evaluate/metrics.json
-plots:
-  - dvclive/plots/metrics:
-      x: step
-  - dvclive_evaluate/plots/metrics:
-      x: step
+      - reports/figures/model_comparison.png
