update evaluate.py for LR

--- a/.dvc/.gitignore
+++ b/.dvc/.gitignore
@@ -21,3 +21,75 @@
 /cache
 /tmp
 /cache
+/tmp
+/cache
+/tmp
+/cache
+/tmp
+/cache
+/tmp
+/cache
+/tmp
+/cache
+/tmp
+/cache
+/tmp
+/cache
+/tmp
+/cache
+/tmp
+/cache
+/tmp
+/cache
+/tmp
+/cache
+/tmp
+/cache
+/tmp
+/cache
+/tmp
+/cache
+/tmp
+/cache
+/tmp
+/cache
+/tmp
+/cache
+/tmp
+/cache
+/tmp
+/cache
+/tmp
+/cache
+/tmp
+/cache
+/tmp
+/cache
+/tmp
+/cache
+/tmp
+/cache
+/tmp
+/cache
+/tmp
+/cache
+/tmp
+/cache
+/tmp
+/cache
+/tmp
+/cache
+/tmp
+/cache
+/tmp
+/cache
+/tmp
+/cache
+/tmp
+/cache
+/tmp
+/cache
+/tmp
+/cache
+/tmp
+/cache
