add more DVC Live features

--- a/.dvc/.gitignore
+++ b/.dvc/.gitignore
@@ -1,2 +1,79 @@
 /tmp
 /cache
+/tmp
+/cache
+/tmp
+/cache
+/tmp
+/cache
+/tmp
+/cache
+/tmp
+/cache
+/tmp
+/cache
+/tmp
+/cache
+/tmp
+/cache
+/tmp
+/cache
+/tmp
+/cache
+/tmp
+/cache
+/tmp
+/cache
+/tmp
+/cache
+/tmp
+/cache
+/tmp
+/cache
+/tmp
+/cache
+/tmp
+/cache
+/tmp
+/cache
+/tmp
+/cache
+/tmp
+/cache
+/tmp
+/cache
+/tmp
+/cache
+/tmp
+/cache
+/tmp
+/cache
+/tmp
+/cache
+/cache
+/tmp
+/cache
+/tmp
+/cache
+/tmp
+/cache
+/tmp
+/cache
+/tmp
+/cache
+/tmp
+/cache
+/tmp
+/cache
+/tmp
+/cache
+/tmp
+/cache
+/tmp
+/cache
+/tmp
+/cache
+/tmp
+/cache
+/tmp
+/cache
