--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -19,12 +19,14 @@ model:
       solver: "lbfgs"
       max_iter: 1000
       random_state: 42
+    class_labels: [0, 1]
   autogluon:
     name: autogluon
     params:
       presets: "best_quality"
-      time_limit: 60
+      time_limit: 3600
       hyperparameters:
         GBM:
           num_boost_round: 100
       verbosity: 2
+    class_labels: [0, 1]
