--- a/.dvc/.gitignore
+++ b/.dvc/.gitignore
@@ -77,3 +77,45 @@
 /cache
 /tmp
 /cache
+/tmp
+/cache
+/tmp
+/cache
+/tmp
+/cache
+/tmp
+/cache
+/tmp
+/cache
+/tmp
+/cache
+/tmp
+/cache
+/tmp
+/cache
+/tmp
+/cache
+/tmp
+/cache
+/tmp
+/cache
+/tmp
+/cache
+/tmp
+/cache
+/tmp
+/cache
+/tmp
+/cache
+/tmp
+/cache
+/tmp
+/cache
+/tmp
+/cache
+/tmp
+/cache
+/tmp
+/cache
+/tmp
+/cache
