add execute bit to update-nvidia-gpu.py

--- a/.dvc/.gitignore
+++ b/.dvc/.gitignore
@@ -1,3 +1,45 @@
 /tmp
 /cache
 /config.local
+/config.local
+/tmp
+/cache
+/config.local
+/tmp
+/cache
+/config.local
+/tmp
+/cache
+/config.local
+/tmp
+/cache
+/config.local
+/tmp
+/cache
+/config.local
+/tmp
+/cache
+/config.local
+/tmp
+/cache
+/config.local
+/tmp
+/cache
+/config.local
+/tmp
+/cache
+/config.local
+/tmp
+/cache
+/config.local
+/tmp
+/cache
+/config.local
+/tmp
+/cache
+/config.local
+/tmp
+/cache
+/config.local
+/tmp
+/cache
