--- a/.dvc/.gitignore
+++ b/.dvc/.gitignore
@@ -2747,3 +2747,57 @@
 /config.local
 /tmp
 /cache
+/config.local
+/tmp
+/cache
+/config.local
+/tmp
+/cache
+/config.local
+/tmp
+/cache
+/config.local
+/tmp
+/cache
+/config.local
+/config.local
+/tmp
+/tmp
+/cache
+/cache
+/config.local
+/tmp
+/cache
+/config.local
+/tmp
+/cache
+/config.local
+/tmp
+/cache
+/config.local
+/tmp
+/cache
+/config.local
+/tmp
+/cache
+/config.local
+/tmp
+/cache
+/config.local
+/tmp
+/cache
+/config.local
+/tmp
+/cache
+/config.local
+/tmp
+/cache
+/config.local
+/tmp
+/cache
+/config.local
+/tmp
+/cache
+/config.local
+/tmp
+/cache
