--- a/.dvc/.gitignore
+++ b/.dvc/.gitignore
@@ -2801,3 +2801,42 @@
 /config.local
 /tmp
 /cache
+/config.local
+/tmp
+/config.local
+/cache
+/tmp
+/cache
+/config.local
+/tmp
+/cache
+/config.local
+/tmp
+/cache
+/config.local
+/tmp
+/cache
+/config.local
+/tmp
+/cache
+/config.local
+/tmp
+/cache
+/config.local
+/tmp
+/cache
+/config.local
+/tmp
+/cache
+/config.local
+/tmp
+/cache
+/config.local
+/tmp
+/cache
+/config.local
+/tmp
+/cache
+/config.local
+/tmp
+/cache
